# tickerlens

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  process-notes.md
backend/: .env.example  main.py  pyproject.toml  sse.py
backend/clients/: anthropic_client.py  yfinance_client.py
backend/graph/: graph.py  state.py
backend/graph/nodes/: fundamentals.py  news.py  synthesis.py  validate.py
backend/prompts/: __init__.py  fundamentals_summary.md  news_analyst.md  synthesis.md
backend/schemas/: briefing.py
backend/scripts/: debug_yfinance.py  run_news.py  run_validate.py
backend/tests/: conftest.py  test_fundamentals.py  test_graph.py  test_news.py  test_sse.py  test_synthesis.py  test_validate.py
docker/: start.sh
docs/: checklist.md  learner-profile.md  prd.md  reflection.md  scope.md  spec.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/results/[ticker]/: page.tsx
frontend/components/: CompanyHeader.tsx  ErrorState.tsx  PerspectiveCard.tsx  PerspectiveCards.tsx  ProgressDisplay.tsx  ResultsView.tsx  TickerInput.tsx
frontend/lib/: api.ts  sse.ts  types.ts
