[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89.0",
    "fastapi>=0.135.3",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.44.0",
    "yfinance<=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
