[project]
name = "backend"
version = "0.1.0"
description = "TickerLens backend — LangGraph multi-agent service that produces three reasoned perspectives (buy/hold/sell) on any stock ticker, streamed over SSE."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anthropic>=0.89.0",
    "fastapi>=0.135.3",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.44.0",
    "yfinance>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
# Local-only project (macOS). Scope resolution so Windows/Py3.14 splits don't block.
environments = ["sys_platform == 'darwin'"]
# Override the global `exclude-newer = "1 week"` so we can pick up recent yfinance fixes.
exclude-newer = "2026-04-20"

[tool.pytest.ini_options]
# Convention: backend/ IS the Python project root.
# Run uvicorn and pytest from inside backend/. All imports are top-level
# (e.g. `from graph.state import ...`), never prefixed with `backend.`.
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
